# QGIS-Tim

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  README.rst  activate.py  deltaforge_install.html  developer.html  environment.yml  example.py  index.html  install.html  listings.json  mypy.ini  pixi.toml  pyproject.toml  ruff.toml  search.json  setup.cfg  setup.py  tox.ini  tutorial-QGIS-TIM.html  tutorial-QGIS-Tim.html  tutorial-TheHague.html  tutorial.html  tutorial_QGIS_Tim.html  tutorial_Rijsenhout.html  tutorial_TheHague.html  tutorial_particle_tracking.html
.github/workflows/: create_archive.py  create_plugin_zip.py  create_pyinstaller_zip.py  docs.yml  release.yml
docs/: .gitignore  _quarto-tutorial.yml  _quarto-website.yml  _quarto.yml  api.rst  changelog.rst  conf.py  deltaforge_install.qmd  dev-docs.rst  developer.qmd  gistim.rst  index.qmd  index.rst  install.qmd  installation.rst  installing.rst  prob-toolkit.rst  qgis-primer.rst  qgis-tim.rst  tutorial-QGIS-TIM.qmd  tutorial-QGIS-Tim.qmd  tutorial-TheHague.qmd  tutorial.qmd  tutorial_Rijsenhout.qmd  tutorial_TheHague.qmd  tutorial_particle_tracking.qmd
docs/_static/: crop-images.py
docs/_templates/: navbar.html
docs/development/: index.rst  plugin.rst  server.rst
docs/figures/tutorial/: crossecties-schets.pptx
gistim/: README.md  __init__.py  __main__.py  common.py  compute.py  data_extraction.py  elements.py  geopackage.py  intersection.py  netcdf.py  pyproject.toml  rasterio.py  rio_utils.py  tim_server.py  timml_elements.py  ttim_elements.py  ugrid.py
gistim/examples/: README.rst  extract-data.py  groningen.py
gistim/examples/data/: .gitattributes  groningen.gpkg  regional-data-groningen.nc
gistim/geomet/: __init__.py  geopackage.py  util.py  wkb.py
gistim/test/: test_elements.py
plugin/: pyproject.toml
plugin/qgistim/: Makefile  README.html  README.txt  __init__.py  dataset_tree_widget.py  extraction_widget.py  geopackage.py  interpreters.py  layer_styling.py  metadata.txt  pb_tool.cfg  plugin_upload.py  processing.py  pyproject.toml  qgistim.py  qgistim_dockwidget.py  resources.py  server_handler.py  tim_elements.py  tim_widget.py  timml_elements.py
plugin/qgistim/core/: dummy_ugrid.py  extractor.py  formatting.py  geopackage.py  install_backend.py  layer_styling.py  processing.py  schemata.py  server_handler.py  task.py  tim_elements.py
plugin/qgistim/core/elements/: __init__.py  aquifer.py  building_pit.py  circular_area_sink.py  colors.py  constant.py  default_values.py  discharge_observation.py  domain.py  element.py  head_line_sink.py  headwell.py  impermeable_line_doublet.py  leaky_building_pit.py  leaky_line_doublet.py  line_sink_ditch.py  observation.py  particle.py  polygon_area_sink.py  polygon_inhomogeneity.py  polygon_semi_confined_top.py  schemata.py  uniform_flow.py  well.py
plugin/qgistim/help/source/: conf.py  index.rst
plugin/qgistim/qt/: qgistim_conda_env.ui  qgistim_dockwidget_base.ui  qgistim_name_dialog_base.ui  qgistim_radius_dialog_base.ui
plugin/qgistim/test/: __init__.py  test_init.py  test_qgis_environment.py  test_qgistim_dockwidget.py  test_resources.py
plugin/qgistim/timml/: __init__.py  dataset_tree_widget.py  extraction_widget.py  tim_elements.py  timml_elements.py  timml_widget.py  ttim_elements.py
plugin/qgistim/widgets/: compute_widget.py  dataset_widget.py  elements_widget.py  error_window.py  extraction_widget.py  install_dialog.py  interpreter_widget.py  options_dialog.py  settings_widget.py  solution_widget.py  tim_widget.py  version_dialog.py
scripts/: deploy.bat  enable_plugin.py  install_qgis_plugin.py  install_qgis_tim_plugin.py  link_backend_dir.py  package.bat  qgis_testrunner.py  run_qgis_ui_tests.py  run_tests.bat  write_backend_versions.py
site_libs/bootstrap/: bootstrap-41e38638c7b5ebad86d5b27233bae1a3.min.css  bootstrap-4978b26caf2fbf66560f9034f076e692.min.css  bootstrap-73da2f715f230a77f008b2aa933638ae.min.css  bootstrap-840e7bce9fc5abf5ee7aec687d225dcb.min.css  bootstrap-84ede947b78ad032198a25618006d6bf.min.css  bootstrap-9250466073fc213f478b92be8c6df561.min.css  bootstrap-be22f849ffc202ff450bf842abfe3ba2.min.css  bootstrap-cad49208f5c448f8654104e27c2c0083.min.css  bootstrap-e8bb08ad3efdbf95288cf69fd266422a.min.css  bootstrap.min.css
test_plugin/: __init__.py  test_aquifer_schemata.py  test_load_plugin.py  test_schemata.py
