[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gistim"
description = "Connects timflow Analytic Element modeling to QGIS"
readme = "README.md"
version = "0.7.0.dev2"
maintainers = [{ name = "Huite Bootsma", email = "huite.bootsma@deltares.nl" }]
requires-python = ">=3.11"
dependencies = ['pandas', 'timflow>=0.2.0', 'xarray', 'numpy']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering',
]
keywords = ['groundwater modeling', 'analytic element']
license = { text = "GPL-2.0" }

[project.urls]
Home = "https://github.com/deltares/QGIS-Tim"
Code = "https://github.com/deltares/QGIS-Tim"
Issues = "https://github.com/deltares/QGIS-Tim/issues"

[tool.setuptools]
packages = ["gistim", "gistim.geomet"]
license-files = ["LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py311" # keep as the lowest for backwards compatible changes.

[tool.ruff.lint]
# enable errors (E), pyflake (F) and isort (I),bugbear (B)
select = ["E", "F", "I", "B", "ICN", "TID"]
ignore = [
    "E501",
    "B905", # TODO: Fix zip without strict keyword
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["qgis.*"]
ignore_missing_imports = true
