[metadata]
name = gistim
version = 0.2.1
author = Huite Bootsma
author_email = huite.bootsma@deltares.nl
description = GIS utilities for Tim(ML) Analytic Element modeling
url = https://gitlab.com/deltares/imod/qgis-tim
project_urls =
    Code=https://gitlab.com/deltares/imod/imod-qgis
    Issues=https://gitlab.com/deltares/imod/qgis-tim/-/issues
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    groundwater modeling
    analytic element

[options]
packages = find:
python_requires = >=3.7
install_requires =
    black
    geopandas
    netCDF4
    numba >=0.50
    numpy
    rasterio
    tqdm
    timml
    ttim
    xarray >=0.15

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    W503 # line break before binary operator
per-file-ignores = 
    __init__.py:F401
    ./docs/conf.py:F401
